# lisp-llm-sandbox

./: .gitignore  CLAUDE.md  CONCURRENCY_ROADMAP.md  CONCURRENCY_V2_DESIGN.md  Cargo.toml  ERROR_AUDIT_INDEX.md  ERROR_INVENTORY_DETAILED.md  ERROR_INVENTORY_SUMMARY.txt  ERROR_REPLACEMENT_CHECKLIST.md  ERROR_REPLACEMENT_EXAMPLES.md  ERROR_REPLACEMENT_GUIDE.md  ERROR_SYSTEM_DESIGN.md  Makefile  README.md  REVIEW_FINDINGS.md  REVIEW_PLAN.md  SPAWN_POC.md  V2_MIGRATION_STATUS.md  test_concurrency_helpers.lisp
.github/workflows/: ci.yml
docs/: stdlib.md
docs/phases/: phase10.md  phase8.md  phase9.md
examples/: concurrency_examples.lisp  data_processing.lisp  factorial.lisp  fibonacci.lisp  functional_programming.lisp  maps_and_json.lisp  parallel_computation_demo.lisp  quicksort.lisp  stdlib_demo.lisp
lisp-macros/: Cargo.toml
lisp-macros/src/: lib.rs
src/: builtins.rs  config.rs  env.rs  error.rs  eval.rs  help.rs  highlighter.rs  lib.rs  macros.rs  main.rs  parser.rs  sandbox.rs  stdlib.lisp  stdlib_registry.rs  tools.rs  value.rs
src/builtins/: arithmetic.rs  comparison.rs  concurrency.rs  console.rs  database.rs  errors.rs  filesystem.rs  help.rs  lists.rs  logic.rs  maps.rs  mod.rs  network.rs  strings.rs  testing.rs  types.rs
src/stdlib/: json.rs  mod.rs
src/stdlib/lisp/: concurrency.lisp  core.lisp  db.lisp  http.lisp  math.lisp  string.lisp  test.lisp
tests/: concurrency_tests.rs  database_tests.rs  integration_test.rs  repl_integration.rs  stdlib_tests.rs  string_tests.rs  test_database.rs
