[workspace]
members = [".", "lisp-macros"]
resolver = "2"

[package]
name = "lisp-llm-sandbox"
version = "1.0.0"
edition = "2021"
description = "A production-ready Scheme-flavored Lisp interpreter in Rust with TCO, macros, and REPL"
authors = ["Trevor Strieber"]
license = "MIT"
repository = "https://github.com/anthropics/lisp-llm-sandbox"
keywords = ["lisp", "interpreter", "scheme", "repl", "functional"]
categories = ["compilers", "command-line-utilities", "educational"]

[dependencies]
cap-std = "3.4.5"
clap = { version = "4.5.51", features = ["derive"] }
inventory = "0.3"
lisp-macros = { path = "lisp-macros" }
nom = "8"
paste = "1.0"
rustyline = "17"
rustyline-derive = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.34"
thiserror = "2"
ureq = { version = "2.10", features = ["json"] }

[dev-dependencies]
serial_test = "3.2.0"
